[gd_scene load_steps=19 format=3 uid="uid://bhqg2l0m8g028"]

[ext_resource type="Script" path="res://scripts/nivel1.gd" id="1_0byhp"]
[ext_resource type="PackedScene" uid="uid://ctmyrlulkq5bw" path="res://scenes/env/background.tscn" id="1_dp26d"]
[ext_resource type="PackedScene" uid="uid://g7ldocm1a1b5" path="res://scenes/objects/gun.tscn" id="2_aeeha"]
[ext_resource type="PackedScene" uid="uid://sevos7bhxqdt" path="res://scenes/personagem/arara_azul.tscn" id="3_4477x"]
[ext_resource type="Script" path="res://scripts/background_nivel1.gd" id="3_o2ax6"]
[ext_resource type="PackedScene" uid="uid://b7o4dlqolv2xb" path="res://scenes/objects/ballon.tscn" id="6_jdwde"]
[ext_resource type="Script" path="res://scripts/mira.gd" id="7_m8a2k"]
[ext_resource type="Texture2D" uid="uid://dabosy3eg5dne" path="res://assets/interface/painel_pergunta.png" id="8_g3tdb"]
[ext_resource type="Texture2D" uid="uid://bkeadsdoyakjw" path="res://assets/interface/pausa.png" id="9_ev0kt"]
[ext_resource type="Script" path="res://scripts/pauseJogo.gd" id="9_ytj1u"]
[ext_resource type="Texture2D" uid="uid://c5rs727gbn1f7" path="res://assets/interface/texto_qual_a_pergunta.png" id="10_gs4bo"]
[ext_resource type="Texture2D" uid="uid://be78pt7gpud23" path="res://assets/interface/fase1.png" id="11_003u2"]
[ext_resource type="PackedScene" uid="uid://clf3bmt51d2vh" path="res://scenes/interface/vida.tscn" id="12_qba8w"]
[ext_resource type="PackedScene" uid="uid://bvt4godvrh1uo" path="res://scenes/pause.tscn" id="13_ma7vm"]
[ext_resource type="Texture2D" uid="uid://d245ljhbcp0fw" path="res://assets/interface/info_teclas.png" id="14_77g28"]
[ext_resource type="Texture2D" uid="uid://cvq5egc1vhrld" path="res://assets/correto.png" id="15_qqxpm"]
[ext_resource type="Texture2D" uid="uid://cumarovy5bt15" path="res://assets/errado.png" id="16_w8xos"]
[ext_resource type="Texture2D" uid="uid://djq0e26x6li5m" path="res://assets/miraErrada.png" id="17_u0wav"]

[node name="Nivel" type="Node2D"]
script = ExtResource("1_0byhp")
metadata/_edit_horizontal_guides_ = []

[node name="Backgrond" parent="." instance=ExtResource("1_dp26d")]
script = ExtResource("3_o2ax6")

[node name="Gun" parent="." instance=ExtResource("2_aeeha")]
position = Vector2(176.5, 554)

[node name="AraraAzul" parent="." instance=ExtResource("3_4477x")]
position = Vector2(224.5, 505)

[node name="Ballon01" parent="." instance=ExtResource("6_jdwde")]
position = Vector2(823, 121)

[node name="Ballon02" parent="." instance=ExtResource("6_jdwde")]
position = Vector2(1046, 147)

[node name="Ballon03" parent="." instance=ExtResource("6_jdwde")]
position = Vector2(933, 282)

[node name="Ballon04" parent="." instance=ExtResource("6_jdwde")]
position = Vector2(1099, 372)

[node name="Ballon05" parent="." instance=ExtResource("6_jdwde")]
position = Vector2(901, 464)

[node name="Ballon06" parent="." instance=ExtResource("6_jdwde")]
position = Vector2(1004, 577)

[node name="Mira" type="Line2D" parent="."]
points = PackedVector2Array(876, 556, 267, 534)
script = ExtResource("7_m8a2k")

[node name="Pergunta" type="Sprite2D" parent="."]
position = Vector2(376, 588)
scale = Vector2(0.308823, 0.308823)
texture = ExtResource("8_g3tdb")

[node name="Label" type="Label" parent="Pergunta"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -588.0
offset_top = -210.0
offset_right = -46.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "2+2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pausa" type="Sprite2D" parent="."]
position = Vector2(1086, 593)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_ev0kt")
script = ExtResource("9_ytj1u")

[node name="TextoQualAPergunta" type="Sprite2D" parent="."]
position = Vector2(566, 88)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_gs4bo")

[node name="Fase" type="Sprite2D" parent="."]
position = Vector2(561, 39)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_003u2")

[node name="Vida" parent="." instance=ExtResource("12_qba8w")]
scale = Vector2(0.2, 0.2)

[node name="Pause" parent="." instance=ExtResource("13_ma7vm")]

[node name="InfoTeclas" type="Sprite2D" parent="."]
position = Vector2(653, 624)
scale = Vector2(0.25, 0.25)
texture = ExtResource("14_77g28")

[node name="TimerErrou" type="Timer" parent="."]
wait_time = 1.5

[node name="Correto" type="Sprite2D" parent="."]
position = Vector2(592, 297)
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_qqxpm")

[node name="ColorRect" type="ColorRect" parent="Correto"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1973.0
offset_top = -990.0
offset_right = -121.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 0.380392)

[node name="Errado" type="Sprite2D" parent="."]
position = Vector2(592, 305)
scale = Vector2(0.3, 0.3)
texture = ExtResource("16_w8xos")

[node name="ColorRect" type="ColorRect" parent="Errado"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1973.0
offset_top = -1017.0
offset_right = -15.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 0.380392)

[node name="MiraErrada" type="Sprite2D" parent="."]
position = Vector2(608, 326)
scale = Vector2(0.25, 0.25)
texture = ExtResource("17_u0wav")

[node name="ColorRect" type="ColorRect" parent="MiraErrada"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2432.0
offset_top = -1304.0
offset_right = -982.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 0.380392)

[connection signal="cont_updated" from="Gun" to="AraraAzul" method="_on_gun_cont_updated"]
[connection signal="cont_updated" from="Gun" to="Mira" method="_on_gun_cont_updated"]
[connection signal="saiuDaTela" from="AraraAzul" to="." method="_on_arara_azul_saiu_da_tela"]
[connection signal="atingido" from="Ballon01" to="." method="_on_ballon_01_atingido"]
[connection signal="body_entered" from="Ballon01" to="." method="_on_ballon_01_body_entered"]
[connection signal="body_entered" from="Ballon01" to="AraraAzul" method="_on_ballon_01_body_entered"]
[connection signal="atingido" from="Ballon02" to="." method="_on_ballon_02_atingido"]
[connection signal="atingido" from="Ballon03" to="." method="_on_ballon_03_atingido"]
[connection signal="atingido" from="Ballon04" to="." method="_on_ballon_04_atingido"]
[connection signal="atingido" from="Ballon05" to="." method="_on_ballon_05_atingido"]
[connection signal="atingido" from="Ballon06" to="." method="_on_ballon_06_atingido"]
[connection signal="pausar" from="Pausa" to="Pause" method="_on_pausa_pausar"]
